--- a/GUI/mainwindow.ui
+++ b/GUI/mainwindow.ui
@@ -50,7 +50,7 @@
         <item>
          <widget class="QTabWidget" name="ModeButtonTab">
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="DropletMode">
            <attribute name="title">
@@ -98,6 +98,13 @@
                </widget>
               </item>
              </layout>
+            </item>
+            <item>
+             <widget class="QPushButton" name="CancelPreviwButton">
+              <property name="text">
+               <string>Cancel Preview</string>
+              </property>
+             </widget>
             </item>
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout">
@@ -223,6 +230,13 @@
                <widget class="QPushButton" name="preview_EmodeButton">
                 <property name="text">
                  <string>Preview</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="CancelPreviwEmodeButton">
+                <property name="text">
+                 <string>Cancel Preview</string>
                 </property>
                </widget>
               </item>
