--- a/GUI/mainwindow.ui
+++ b/GUI/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>967</width>
+    <width>1202</width>
     <height>660</height>
    </rect>
   </property>
@@ -117,7 +117,7 @@
               <item>
                <widget class="QPushButton" name="StartButton">
                 <property name="statusTip">
-                 <string>Send the path sequence to Arduino</string>
+                 <string>Send the path sequence to Arduino starting from the slider's current position</string>
                 </property>
                 <property name="styleSheet">
                  <string notr="true">background: rgb(71, 200, 51)</string>
@@ -254,7 +254,7 @@
               <item>
                <widget class="QPushButton" name="Start_EmodeButton">
                 <property name="statusTip">
-                 <string>Send the path sequence to Arduino</string>
+                 <string>Send the path sequence to Arduino starting from the slider's current position</string>
                 </property>
                 <property name="styleSheet">
                  <string notr="true">background: rgb(71, 200, 51)</string>
@@ -323,69 +323,97 @@
            <attribute name="title">
             <string>Parameters</string>
            </attribute>
-           <layout class="QVBoxLayout" name="verticalLayout_12">
+           <layout class="QVBoxLayout" name="verticalLayout_13">
             <item>
-             <widget class="QLabel" name="label_8">
-              <property name="statusTip">
-               <string>Set the number of iterations for a sequence</string>
-              </property>
-              <property name="text">
-               <string>Sequence Iterations</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QSpinBox" name="IterationspinBox">
-              <property name="minimum">
-               <number>1</number>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="label_9">
-              <property name="statusTip">
-               <string>Set the delay between iterations</string>
-              </property>
-              <property name="text">
-               <string>Iteration Delay (ms)</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="IterationDelayText">
-              <property name="text">
-               <string>2000</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="label_10">
-              <property name="statusTip">
-               <string>Set the amount of time the electrode is turned on</string>
-              </property>
-              <property name="text">
-               <string>Actuation Time (ms)</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_8">
+             <layout class="QVBoxLayout" name="verticalLayout_12">
               <item>
-               <widget class="QLineEdit" name="ActuationTimeText">
+               <widget class="QLabel" name="label_8">
+                <property name="statusTip">
+                 <string>Set the number of iterations for a sequence</string>
+                </property>
                 <property name="text">
-                 <string>1000</string>
+                 <string>Sequence Iterations</string>
                 </property>
                </widget>
               </item>
               <item>
-               <widget class="QPushButton" name="setActuationButton">
-                <property name="statusTip">
-                 <string>Send the actuation delay instruction to Arduino</string>
-                </property>
-                <property name="text">
-                 <string>Set</string>
+               <widget class="QSpinBox" name="IterationspinBox">
+                <property name="minimum">
+                 <number>1</number>
                 </property>
                </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="label_9">
+                <property name="statusTip">
+                 <string>Set the delay between iterations</string>
+                </property>
+                <property name="text">
+                 <string>Iteration Delay (ms)</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="IterationDelayText">
+                <property name="text">
+                 <string>2000</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="label_10">
+                <property name="statusTip">
+                 <string>Set the amount of time the electrode is turned on</string>
+                </property>
+                <property name="text">
+                 <string>Actuation Time (ms)</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_8">
+                <item>
+                 <widget class="QLineEdit" name="ActuationTimeText">
+                  <property name="text">
+                   <string>1000</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="setActuationButton">
+                  <property name="statusTip">
+                   <string>Send the actuation delay instruction to Arduino</string>
+                  </property>
+                  <property name="text">
+                   <string>Set</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <widget class="QLabel" name="label_3">
+                <property name="statusTip">
+                 <string>Set the voltage of the function generator</string>
+                </property>
+                <property name="text">
+                 <string>Voltage (Vpk-pk)</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_9">
+                <item>
+                 <widget class="QLineEdit" name="VoltageText"/>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="setVoltageButton">
+                  <property name="text">
+                   <string>Set</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
               </item>
              </layout>
             </item>
@@ -590,7 +618,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>967</width>
+     <width>1202</width>
      <height>21</height>
     </rect>
    </property>
